# src/Services/Users/UsersController.ts
@@ -1,10 +1,12 @@
 import { Body, Controller, Delete, Get, Put, Query, Route, Security, Tags } from "tsoa";
-import { UpdateUserBody, User, Users } from "./UsersModel";
+import { ErrorType } from "../../common/errorType";
+import { ApiError } from "../../common/handlers/errorHandler";
+import { BasePageResult } from "../../dto/BasePageResult";
+import { UpdateUser, User, Users } from "./UsersModel";
 import { UsersService } from "./UsersService";
 
 const {
   getUsersById,
-  // createUser,
   deleteUser,
   getAllUsers,
   updateUser,
@@ -15,18 +17,26 @@ const {
 export class UsersController extends Controller {
 
   @Get()
-  getAllUsers(@Query("page") page?: number, @Query("limit") limit?: number): Promise<User[]> {
-    return getAllUsers(page, limit);
+  getAllUsers(@Query("page") page?: number, @Query("limit") limit?: number): Promise<BasePageResult<User>> {
+    try {
+      return getAllUsers(page, limit).then((result) => ({
+        page,
+        limit,
+        count: result.length,
+        items: result,
+      }));
+    } catch (e) {
+      return Promise.reject(new ApiError("", 500, ErrorType.DataBaseErrorException));
+    }
   }
-
+  @Security("jwt", ["Admin"])
   @Get("{id}")
   getUserById(id: string): Promise<User> {
     return getUsersById(id);
   }
 
-  @Security("jwt", ["Admin"])
   @Put("/{id}")
-  updateUser(id: string, @Body() body: UpdateUserBody): Promise<{ role: string } & User> {
+  updateUser(id: string, @Body() body: UpdateUser): Promise<{ role: string } & User> {
     return updateUser(id, body);
   }
 
